Styling: Added footer, stopwatch fixes on small screens

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,7 +6,7 @@ body {
 
 .stopwatch {
     .countdown-value {
-        font-size: 60px;
+        font-size: 54px;
         color: #000;
 
         @media (min-width: 768px) {
